--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -280,3 +280,11 @@ table {
             -ms-overflow-style: -ms-autohiding-scrollbar;
   }
 }
+
+.section-nav {
+  background-color: #fff;
+  margin: 5px 0;
+  padding: 10px 30px;
+  border: 1px solid #e8e8e8;
+  border-radius: 3px;
+}
