--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,4 +35,36 @@ layout: default
   {%- endif -%}
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
+
+  
 </article>
+
+{% assign provider = site.comments.provider | default:"disqus" %}
+{% if provider == "disqus" %}
+  {% assign disqus = site.disqus | default:site.disqus_shortname %}
+  {% if disqus %}
+    <!-- original disqus codes -->
+  {% endif %}
+{% elsif provider == "utterances" %}
+  {% assign utterances = site.utterances %}
+  {% if utterances.repo %}
+    <script src="https://utteranc.es/client.js"
+            repo=        {{ utterances.repo }}
+            issue-term=  {{ utterances.issue-term }}
+            label=       {{ utterances.label }}
+            theme=       {{ utterances.theme }}
+            crossorigin= "anonymous"
+            async>
+    </script>
+  {% endif %}
+{% endif %}
+
+
+<script src="https://utteranc.es/client.js"
+        repo="https://github.com/zayngdev/zayngdev.github.io" 
+        issue-term="pathname"
+        theme="github-dark"
+        label="comment"
+        crossorigin="anonymous"
+        async>
+</script>
