--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,18 @@
       {%- endif %}
       </div>
       <div class="footer-col">
-        <p>{{ site.description | escape }}</p>
+        <!-- <p>{{ site.description | escape }}</p> -->
+        <div id="revue-embed">
+          <form action="https://www.getrevue.co/profile/zyang-pointer/add_subscriber" method="post" id="revue-form" name="revue-form"  target="_blank">
+          <div class="revue-form-group">
+            <label for="member_email">Newsletter:</label>
+            <input class="revue-form-field" placeholder="Your email address..." type="email" name="member[email]" id="member_email">
+          </div>
+          <div class="revue-form-actions">
+            <input type="submit" value="Subscribe" name="member[subscribe]" id="member_submit">
+          </div>
+          </form>
+        </div>
       </div>
     </div>
 
